fix spacing and layout of hero section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,6 +47,7 @@ nav {
   display: flex;
   align-items: center; /* align elements vertically */
   justify-content: space-between; /* align elements horizontally */
+  padding-bottom: 100px;
 }
 
 .hero-text {
@@ -57,6 +58,7 @@ nav {
 .hero-image-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 40%;
 }
 
@@ -64,6 +66,8 @@ nav {
   max-width: 400px;
   max-height: 200px;
   object-fit: cover;
+  position: absolute;
+  right: 100px;
 }
 
 ul {
@@ -78,7 +82,7 @@ li {
   width: 100px;
   height: 100px;
   border-radius: 8px;
-  margin: 20px;
+  margin: 16px;
   list-style-type: none;
 }
 
@@ -92,6 +96,8 @@ a {
 h1 {
   font-size: 48px;
   color: #ffffff;
+  line-height: 45px;
+  margin-bottom: 10px;
 }
 
 h2 {
@@ -111,10 +117,11 @@ h4 {
 }
 
 p {
-  width: 50%;
+  width: 80%;
   font-weight: 200;
   font-size: 18px;
   color: #e5e7eb;
+  margin-top: 5px;
 }
 
 button {
@@ -123,7 +130,7 @@ button {
   border-radius: 4px;
   color: #ffffff;
   padding: 8px 22px 8px 22px;
-  margin: auto;
+  margin-top: 10px;
 }
 
 .card-description {
